--- a/index.html
+++ b/index.html
@@ -2,149 +2,121 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visual Story Project - Midterm</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Summer Adventure - Visual Story Project</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- Optional: Add a page header with your story title -->
+  <!-- Header -->
   <header>
-    <h1>My Story Title</h1>
-    <!-- Change the h1 title to match your narrative -->
-    <!-- You can add introductory text here if it serves your narrative -->
+    <h1>My Summer Adventure</h1>
+    <p>A journey of discovery, sunshine, and new experiences.</p>
   </header>
 
-  <!-- Main content area: This becomes the CSS Grid container -->
+  <!-- Main Story Grid -->
   <main class="story-grid">
 
     <!-- Panel 1 -->
     <article class="panel">
-      <h2>Panel 1 Title</h2>
+      <h2>1. Packing Up</h2>
       <figure>
-        <!-- Replace this comment with your edited Storyset SVG -->
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <!-- Your SVG code goes here -->
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Traveling-cuate.svg" alt="Person packing suitcase before a trip" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          Stuffing my suitcase with excitement and way too many outfits.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        The night before my flight, I couldn’t sleep. I kept double-checking my passport,
+        charger, and favorite pair of sunglasses. The thrill of the unknown was already buzzing in my chest.
       </p>
     </article>
 
     <!-- Panel 2 -->
     <article class="panel">
-      <h2>Panel 2 Title</h2>
+      <h2>2. Up in the Air</h2>
       <figure>
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Flying around the world-cuate.svg" alt="Airplane flying around the globe" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          The hum of the airplane engines became the soundtrack to my adventure.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        Watching clouds drift below me felt surreal — a reminder that the world was so much bigger than my routine.
+        Each passing mile felt like a step closer to something new and exciting.
       </p>
     </article>
 
     <!-- Panel 3 -->
     <article class="panel">
-      <h2>Panel 3 Title</h2>
+      <h2>3. Touchdown and Exploration</h2>
       <figure>
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Exploring-cuate.svg" alt="Traveler exploring a city with map in hand" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          Landing in a new city meant getting lost — in the best way possible.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        The streets buzzed with life, street vendors filled the air with spice and sound,
+        and every corner offered a story waiting to be discovered.
+        I followed curiosity instead of a map, and it led me to hidden gems.
       </p>
     </article>
 
     <!-- Panel 4 -->
     <article class="panel">
-      <h2>Panel 4 Title</h2>
+      <h2>4. A Day at the Beach</h2>
       <figure>
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Beach-cuate.svg" alt="Relaxing on a sunny beach" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          The sound of waves crashing was the most peaceful song I’d ever heard.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        The sand was warm beneath my feet and the water sparkled like glass.
+        Time slowed down as I floated in the calm surf — a reminder that joy often comes in stillness.
       </p>
     </article>
 
     <!-- Panel 5 -->
     <article class="panel">
-      <h2>Panel 5 Title</h2>
+      <h2>5. Diving Into the Deep</h2>
       <figure>
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Diving-cuate.svg" alt="Scuba diver exploring underwater" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          Beneath the surface, a whole new world came alive in color and motion.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        Coral reefs swayed like living rainbows and curious fish darted past.
+        Breathing underwater felt like defying gravity — weightless, calm, and completely free.
       </p>
     </article>
 
     <!-- Panel 6 -->
     <article class="panel">
-      <h2>Panel 6 Title</h2>
+      <h2>6. Sunset Reflections</h2>
       <figure>
-        <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="500" height="500" fill="hsl(210, 27%, 91%)" />
-          <text x="250" y="250" text-anchor="middle" fill="hsl(0, 0%, 10%)" font-size="24">
-            Your SVG Here
-          </text>
-        </svg>
+        <img src="img/Pina colada-cuate.svg" alt="Relaxing with a tropical drink at sunset" />
         <figcaption>
-          Brief description of what's shown in the image (1-2 sentences).
+          The final evening was golden — both the sky and my heart felt full.
         </figcaption>
       </figure>
       <p>
-        Narrative story text that expands on the moment. Add context, emotion, or backstory here (2-4 sentences).
+        As the sun dipped into the horizon, I realized adventures don’t just change your location —
+        they change your perspective. With a drink in hand and new memories in mind, I felt endlessly grateful.
       </p>
     </article>
 
   </main>
 
-  <!-- Optional: Add a footer with closing thoughts or reflections -->
+  <!-- Footer -->
   <footer>
-    <!-- Add attribution for Storyset from Freepik -->
     <p>Illustrations by <a href="https://storyset.com" target="_blank" rel="noopener">Storyset</a></p>
-    <!-- Optional: You can add concluding text here if it serves your narrative -->
+    <p>Created by [Your Name] for the Visual Story Midterm Project</p>
   </footer>
 
 </body>
-
 </html>
