--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </figcaption>
       </figure>
       <p>
-        Watching clouds drift below me felt surreal — a reminder that the world was so much bigger than my routine.
+        Watching clouds drift below me felt surreal; a reminder that the world was so much bigger than my routine.
         Each passing mile felt like a step closer to something new and exciting.
       </p>
     </article>
@@ -76,7 +76,7 @@
       </figure>
       <p>
         The sand was warm beneath my feet and the water sparkled like glass.
-        Time slowed down as I floated in the calm surf — a reminder that joy often comes in stillness.
+        Time slowed down as I floated in the calm surf; a reminder that joy often comes in stillness.
       </p>
     </article>
 
@@ -91,7 +91,7 @@
       </figure>
       <p>
         Coral reefs swayed like living rainbows and curious fish darted past.
-        Breathing underwater felt like defying gravity — weightless, calm, and completely free.
+        Breathing underwater felt like defying gravity; weightless, calm, and completely free.
       </p>
     </article>
 
@@ -105,7 +105,7 @@
         </figcaption>
       </figure>
       <p>
-        As the sun dipped into the horizon, I realized adventures don’t just change your location —
+        As the sun dipped into the horizon, I realized adventures don’t just change your location;
         they change your perspective. With a drink in hand and new memories in mind, I felt endlessly grateful.
       </p>
     </article>
@@ -115,7 +115,7 @@
   <!-- Footer -->
   <footer>
     <p>Illustrations by <a href="https://storyset.com" target="_blank" rel="noopener">Storyset</a></p>
-    <p>Created by [Your Name] for the Visual Story Midterm Project</p>
+    <p>Created by Stephanie Perdomo for the Visual Story Midterm Project</p>
   </footer>
 
 </body>
